# fullstack-research-agent

./: .gitignore  README.md
agent/: config.py  pyproject.toml
agent/tools/: outline_writer.py
frontend/src/app/api/copilotkit/: route.ts
